Author api
get authors list
