# swagger_server/swagger/swagger.yaml
@@ -156,6 +156,36 @@ paths:
           description: Book not found
           content: {}
       x-openapi-router-controller: swagger_server.controllers.book_controller
+  /author:
+    get:
+      tags:
+      - author
+      summary: Get all Authors
+      operationId: get_all_authors
+      parameters:
+      - name: "page"
+        in: "query"
+        required: false
+        schema:
+            type: integer
+      - name: "per_page"
+        in: "query"
+        required: false
+        schema:
+            type: integer
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Author'
+        400:
+          description: "invalid parameters value"
+      x-openapi-router-controller: swagger_server.controllers.author_controller
+
 components:
   schemas:
     Author:
